# omnicraft

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/omnicraft-cli/: Cargo.toml  README.md
crates/omnicraft-cli/src/: hmr.rs  main.rs
crates/omnicraft-cli/src/commands/: build.rs  check.rs  compile.rs  dev.rs  init.rs  mod.rs
crates/omnicraft-compiler/: Cargo.toml  README.md
crates/omnicraft-compiler/src/: ast.rs  lexer.rs  lib.rs  npm.rs  parser.rs  sourcemap.rs
crates/omnicraft-compiler/src/analyzer/: dependency.rs  mod.rs  scope.rs  types.rs
crates/omnicraft-compiler/src/codegen/: mod.rs  rust.rs  typescript.rs
crates/omnicraft-compiler/src/optimizer/: const_fold.rs  dce.rs  inline.rs  mod.rs
crates/omnicraft-compiler/tests/: compiler_integration.rs
crates/omnicraft-lsp/: Cargo.toml  README.md
crates/omnicraft-lsp/src/: capabilities.rs  completion.rs  diagnostics.rs  hover.rs  main.rs
crates/omnicraft-runtime/: Cargo.toml  README.md
crates/omnicraft-runtime/src/: components.rs  layout.rs  lib.rs  render.rs  signals.rs  tessellation.rs
crates/omnicraft-runtime/src/ecs/: mod.rs  world_ext.rs
crates/omnicraft-runtime/tests/: runtime_integration.rs
debug_test/: Cargo.toml  README.md  omnicraft.config.json
debug_test/public/: index.html
debug_test/src/: App.omni
docs/: OmniCraft Software Design.md  OmniCraft-Dependencies.md  Omnicraft - 2.0.md  Omnicraft - Improvement and Optimization.md  Performance.md  ️ Beyond Performance.md
examples/counter/: App.omni
examples/hello-world/: App.omni
examples/shapes/: App.omni
testsure/: Cargo.toml  README.md  omnicraft.config.json  run_log.txt
testsure/public/: index.html
testsure/src/: App.omni
