[package]
name = "testsure"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "dist/App.rs"

[dependencies]
# Use relative path for local development
omnicraft-runtime = { path = "../crates/omnicraft-runtime" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[workspace]
