[package]
name = "omnicraft-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OmniCraft CLI: compile, dev, build commands"

[[bin]]
name = "omnicraft"
path = "src/main.rs"

[dependencies]
omnicraft-compiler = { path = "../omnicraft-compiler" }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true, features = ["process"] }

# File watching
notify = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Web Server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
futures = "0.3"
wasm-bindgen-cli-support = "0.2"
