[package]
name = "omnicraft-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OmniCraft compiler: .omni → Rust code generator"

[dependencies]
# Lexer
logos = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
